# satysfi-csvtable

./: README.md  Satyristes  satysfi-csvtable-doc.opam  satysfi-csvtable.opam
doc/: csvtable-manual-ja.saty  manual.saty  sample1.csv  sample2.csv
doc/source/: sample3.csv  sample4.csv  sample5.csv  sample7.csv
src/: csvtable.satyh
