opam-version: "2.0"
name: "satysfi-csvtable"
version: "1.0.0"
synopsis: "A SATySFi package to embed CSV into tables."
description: """
A SATySFi package to embed CSV into tables.
"""
maintainer: "Wataru Otsubo <urataw421@gmail.com>"
authors: "Wataru Otsubo <urataw421@gmail.com>"
license: "MIT"
homepage: "https://github.com/qwjyh/satysfi-csvtable"
dev-repo: "git+https://github.com/qwjyh/satysfi-csvtable.git"
bug-reports: "https://github.com/qwjyh/satysfi-csvtable/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.8" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
  "satysfi-csv"
  "satysfi-easytable"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "csvtable"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "csvtable"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
